--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -9,17 +9,34 @@
 </head>
 
 <body>
+  <div class="pizza"> i ate 0 pizza </div>
   <div class="items">
+    <h2>Sub Div <strong>okay dak</strong>  <span> hidden </span> </h2>
     <p>Hi I'm a item</p>
     <div>
       <h2>Sub Div</h2>
-      <p>Hi I'm a item</p>
-
+      <p id="one">Hi I'm a item</p>
     </div>
     <img src="https://source.unsplash.com/random/300x300" />
     <p>Hi I'm a item</p>
     <p>Hi I'm a item</p>
   </div>
+  
+  <div class="items">
+    <p>Hi I'm a item</p>
+    <div>
+      <p>Hi I'm a item</p>
+      
+    </div>
+    <img src="https://source.unsplash.com/random/300x300" />
+    <p>Hi I'm a item</p>
+    <p>Hi I'm a item</p>
+  </div>
+  <style> span {
+    display: none;
+    }
+    </style>
+  <script src="./the-dom.js"></script>
 </body>
 
 </html>
