--- a/exercises/20 - The DOM/index.html
+++ b/exercises/20 - The DOM/index.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
-  <div class="pizza"> i ate 0 pizza </div>
-  <div class="items">
-    <h2>Sub Div <strong>okay dak</strong>  <span> hidden </span> </h2>
-    <p>Hi I'm a item</p>
-    <div>
+<p class="okay"> I am wes, I <em>love</em> bbq</p>
+<p class="wes"> I am wes, I <em>love</em> bbq</p>
+
+  <!-- <img data-custom="okaythis" class="nice" src="https://source.unsplash.com/random/600x600" /> -->
+  <div class="item">
+    <div class="wrapper">
       <h2>Sub Div</h2>
       <p id="one">Hi I'm a item</p>
     </div>
@@ -21,22 +22,28 @@
     <p>Hi I'm a item</p>
     <p>Hi I'm a item</p>
   </div>
-  
-  <div class="items">
+
+  <div class="item">
     <p>Hi I'm a item</p>
     <div>
       <p>Hi I'm a item</p>
-      
+
     </div>
     <img src="https://source.unsplash.com/random/300x300" />
     <p>Hi I'm a item</p>
     <p>Hi I'm a item</p>
   </div>
-  <style> span {
-    display: none;
+  <style>
+    span {
+      display: none;
     }
-    </style>
-  <script src="./the-dom.js"></script>
+  </style>
+  <script src="./DOM-Cardio.js"></script>
+
+<p></p>
+<p></p>
+
+
 </body>
 
 </html>
